<?xml version="1.0"?>
<package format="2">
  <name>road_crossing_gazebo</name>
  <version>1.0.0</version>
  <description>Simulation for experimental verification of road_crossing package.</description>

  <maintainer email="vlkjan6@fel.cvut.cz">Jan Vlk</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>road_crossing</exec_depend>
  <exec_depend>compass</exec_depend>
  <exec_depend>imu_pipeline</exec_depend>
  <exec_depend>ouster_description</exec_depend>
  <exec_depend>gps_to_path</exec_depend>
</package>
